# rabo-overview

./: .env.dev  .env.example  .gitignore  .pylintrc  Dockerfile  Procfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
accounts/migrations/: 0001_initial.py
apps/transactions/: managers.py  models.py  urls.py  views.py
apps/transactions/migrations/: 0001_initial.py  0003_alter_account_account_number.py  0004_alter_account_name.py
apps/transactions/templatetags/: components.py  filters.py  statistics.py
apps/transactions/tests/: factories.py  test_fileparser.py  test_managers.py  test_models.py  test_views.py
apps/transactions/tests/data/: data.rtf  duplicate_transaction.csv  faulty_transaction.csv  is_user_owner_switch.csv  other_parties_no_account_number.csv  single_dummy.csv
apps/transactions/tests/filters/: test_filters.py  test_month_filters.py  (+1 more)
apps/transactions/utils/: fileparser.py  objects.py  summary.py  transaction_flow.py
docker/: Dockerfile  docker-entrypoint.sh
docker/nginx/: nginx.conf
frontend/: .eslintrc.js  jest.config.ts  package.json  tsconfig.json  vite.config.js
frontend/src/js/: app.js  main.js
homebudget/: asgi.py  settings.py  urls.py  wsgi.py
static/: style.css
static/js/: layout.js
templates/: base.html  components.yaml
templates/components/: center.html
templates/registration/: login.html
templates/transactions/: anonymous_upload.html  monthly.html  transaction_list.html  upload.html
templates/transactions/components/: receiver_overviews.html  summary_text.html  transactions_box.html
transactions/: forms.py  managers.py  models.py  urls.py  utils.py  views.py
transactions/migrations/: 0002_auto_20210726_0904.py
transactions/templatetags/: filters.py  overviews.py  statistics.py
transactions/tests/: factories.py  test_fileparser.py  test_filters.py  test_managers.py  test_models.py  test_views.py  utils.py
transactions/tests/data/: duplicate_account.csv  missing_headers.csv  non_user_account.csv
transactions/tests/filters/: test_month_filters.py  test_statistics.py
transactions/utils/: date.py  file.py  fileparser.py
(+4 files in other folders)
