[tool.poetry]
name = "homebudget"
version = "0.1.0"
description = ""
authors = ["Timo Hermans <tmhermans@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
psycopg2 = "^2.9.1"
djangorestframework = "^3.12.4"
factory-boy = "^3.2.0"
django-environ = "^0.4.5"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
