[tool.poetry]
name = "homebudget-django"
version = "0.1.0"
description = ""
authors = ["Timo Hermans <tmhermans@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
django-debug-toolbar = "^3.2.2"
django-environ = "^0.5.0"
psycopg2 = "^2.9.1"
slippers = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-django = "^4.4.0"
factory-boy = "^3.2.0"
Faker = "^8.12.1"
black = "^21.8b0"
mypy = "^0.910"
mypy-extensions = "^0.4.3"
types-python-dateutil = "^0.1.6"
django-stubs = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
